--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -20,16 +20,17 @@
   // Variants
   &--default {
     background-color: #1f2937;
-    color: white;
+
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 
     &:hover {
-      background-color: #374151;
+
+      background-color: #78909C;
     }
 
     &:active {
       transform: scale(0.98);
-      background-color: #111827;
+      background-color: #78909C;
       box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     }
   }
